--- a/mod2_solut/index.html
+++ b/mod2_solut/index.html
@@ -8,19 +8,19 @@
     </head>
     <body>
         <h1>Our Menu</h1>
-        <div class="row">
-            <div class="menuBox col-lg" id="box1">
-                <h2>Chicken</h2>
-                <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.</p>
-            </div>
-            <div class="menuBox col-lg" id="box2">
-                <h2>Beef</h2>
-                <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.</p>
-            </div>
-            <div class="menuBox col-lg" id="box3">
-                <h2>Pork</h2>
-                <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.</p>
-            </div>
+        <div class="menuBox col-lg-4 col-md-6 col-sm-12" id="box1">
+            <h2>Chicken</h2>
+            <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.</p>
         </div>
+        <div class="menuBox col-lg-4 col-md-6 col-sm-12" id="box2">
+            <h2>Beef</h2>
+            <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.
+        </div>
+        <div class="menuBox col-lg-4 col-md-12 col-sm-12" id="box3">
+            <h2>Pork</h2>
+            <p>Savoury chicken. Four legs and four thighs. Please note that the white meat substitution is only available for regular fried chicken.
+            </p>
+            </p>
+         </div>
     </body>
 </html>
