--- a/mod2_solut/index.html
+++ b/mod2_solut/index.html
@@ -14,7 +14,7 @@
         </div>
         <div class="menuBox col-lg-4 col-md-6 col-sm-12" id="box2">
             <h2>Beef</h2>
-            <p>SSilverside and topside are cheaper and leaner cuts of meat, well-suited to slow-cooking. The stock and juices make a great sauce when combined with caramelised onions.
+            <p>Silverside and topside are leanear cuts of meat, well-suited to slow-cooking. The stock and juices make a great sauce when combined with caramelised onions.
         </div>
         <div class="menuBox col-lg-4 col-md-12 col-sm-12" id="box3">
             <h2>Pork</h2>
